# aiohh

./: README.md  pyproject.toml  setup.cfg
aiohh/api/: base.py  client.py
aiohh/client/session/: aiohttp.py  base.py
aiohh/exceptions/: api.py  base.py  decode.py  network.py
aiohh/methods/: __init__.py  base.py  get_vacancy.py
aiohh/types/: __init__.py  base.py  vacancy.py
examples/: simple.py
