[tool.poetry]
name = "aiohh"
version = "0.1.0"
description = ""
authors = ["Danila Novichikhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
pydantic = "^2.0.3"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
